# egui

./: Cargo.toml  \
crates/ecolor/: Cargo.toml
crates/ecolor/src/: lib.rs
crates/eframe/: Cargo.toml
crates/egui/: Cargo.toml
crates/egui/src/: context.rs  id.rs  input_state.rs  layout.rs  lib.rs  memory.rs  menu.rs  painter.rs  style.rs  ui.rs  widget_text.rs
crates/egui/src/containers/: popup.rs
crates/egui/src/data/: input.rs  output.rs
crates/egui/src/input_state/: touch_state.rs
crates/egui/src/util/: cache.rs
crates/egui/src/widgets/: spinner.rs
crates/egui/src/widgets/plot/: legend.rs  mod.rs
crates/egui/src/widgets/plot/items/: bar.rs  box_elem.rs  rect_elem.rs  values.rs
crates/egui/src/widgets/text_edit/: state.rs  text_buffer.rs
crates/egui_extras/: Cargo.toml
crates/egui_extras/src/: image.rs  lib.rs  sizing.rs  strip.rs  table.rs
crates/emath/: Cargo.toml
crates/emath/src/: lib.rs  numeric.rs
crates/epaint/: Cargo.toml
crates/epaint/src/: bezier.rs  image.rs  lib.rs  mesh.rs  shadow.rs  shape.rs  shape_transform.rs  stats.rs  tessellator.rs  texture_atlas.rs  texture_handle.rs  textures.rs
crates/epaint/src/text/: font.rs  fonts.rs  text_layout.rs  text_layout_types.rs
crates/std/: Cargo.toml
crates/std/src/: lib.rs
