[package]
name = "std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
hashbrown = { version = "0.13.2", features = ["ahash", "inline-more", "serde"] }
ahash = { version = "0.8.3", default-features = false, features = ["runtime-rng", "serde"] }
